// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render correctly 1`] = `
<DocumentFragment>
  .cache-3ifqny {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3ifqny[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3ifqny[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3ifqny .eu28k4m6,
.cache-3ifqny .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3ifqny .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1eqmmu5 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1eqmmu5:not(:disabled) {
  cursor: pointer;
}

.cache-1eqmmu5:disabled {
  cursor: not-allowed;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-1eqmmu5:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1eqmmu5:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-roggk2 {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-3ifqny eu28k4m1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-1eqmmu5 eu28k4m2"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-roggk2 eu28k4m7"
            height="14"
            rx="1px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly checked without value 1`] = `
<DocumentFragment>
  .cache-3ifqny {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3ifqny[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3ifqny[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3ifqny .eu28k4m6,
.cache-3ifqny .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3ifqny .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1eqmmu5 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1eqmmu5:not(:disabled) {
  cursor: pointer;
}

.cache-1eqmmu5:disabled {
  cursor: not-allowed;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-1eqmmu5:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1eqmmu5:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-roggk2 {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-3ifqny eu28k4m1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        checked=""
        class="cache-1eqmmu5 eu28k4m2"
        name="checked"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-roggk2 eu28k4m7"
            height="14"
            rx="1px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-3ifqny {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3ifqny[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3ifqny[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3ifqny .eu28k4m6,
.cache-3ifqny .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3ifqny .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1eqmmu5 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1eqmmu5:not(:disabled) {
  cursor: pointer;
}

.cache-1eqmmu5:disabled {
  cursor: not-allowed;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-1eqmmu5:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1eqmmu5:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-roggk2 {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="cache-3ifqny eu28k4m1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-1eqmmu5 eu28k4m2"
        disabled=""
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-roggk2 eu28k4m7"
            height="14"
            rx="1px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with a value 1`] = `
<DocumentFragment>
  .cache-3ifqny {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3ifqny[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3ifqny[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3ifqny .eu28k4m6,
.cache-3ifqny .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3ifqny .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1eqmmu5 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1eqmmu5:not(:disabled) {
  cursor: pointer;
}

.cache-1eqmmu5:disabled {
  cursor: not-allowed;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-1eqmmu5:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1eqmmu5:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-roggk2 {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-3ifqny eu28k4m1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-1eqmmu5 eu28k4m2"
        name="value"
        type="checkbox"
        value="foo"
      />
      <svg
        class="cache-ttqha5 eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-roggk2 eu28k4m7"
            height="14"
            rx="1px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
    <label
      aria-disabled="false"
      class="cache-3ifqny eu28k4m1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        checked=""
        class="cache-1eqmmu5 eu28k4m2"
        name="value"
        type="checkbox"
        value="bar"
      />
      <svg
        class="cache-ttqha5 eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-roggk2 eu28k4m7"
            height="14"
            rx="1px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-3ifqny {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3ifqny[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3ifqny[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3ifqny .eu28k4m6,
.cache-3ifqny .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3ifqny .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1eqmmu5 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1eqmmu5:not(:disabled) {
  cursor: pointer;
}

.cache-1eqmmu5:disabled {
  cursor: not-allowed;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-1eqmmu5:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1eqmmu5:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-roggk2 {
  fill: #ffffff;
  stroke: #b2b6c3;
}

.cache-7wqnxk-sizeStyles {
  vertical-align: middle;
  fill: #a6102d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-eywsr3 {
  color: #a6102d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-3ifqny eu28k4m1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-describedby="test-hint"
        aria-invalid="true"
        class="cache-1eqmmu5 eu28k4m2"
        name="test"
        required=""
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-roggk2 eu28k4m7"
            height="14"
            rx="1px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
      Checkbox field error
      <sup>
        <svg
          class="cache-7wqnxk-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
          />
        </svg>
      </sup>
    </label>
    <p
      class="eu28k4m4 cache-eywsr3 e1tg3t120"
    >
      This field is required
    </p>
    <div>
      Focus
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-3ifqny {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-3ifqny[aria-disabled='false'] {
  cursor: pointer;
}

.cache-3ifqny[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-3ifqny[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-3ifqny .eu28k4m6,
.cache-3ifqny .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-3ifqny .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-3ifqny:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1eqmmu5 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1eqmmu5:not(:disabled) {
  cursor: pointer;
}

.cache-1eqmmu5:disabled {
  cursor: not-allowed;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-1eqmmu5:not(:disabled):checked+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5:not(:disabled)[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-1eqmmu5[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-1eqmmu5:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1eqmmu5:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1eqmmu5[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-roggk2 {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-3ifqny eu28k4m1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-1eqmmu5 eu28k4m2"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-roggk2 eu28k4m7"
            height="14"
            rx="1px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
      Checkbox field events
    </label>
  </form>
</DocumentFragment>
`;
